# lang-claw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/commands/: ci-status.md  commit-push.md  devops.md  pr.md  review.md
.claude/skills/committing/: SKILL.md
.claude/skills/pr-creating/: SKILL.md
.claude/skills/reviewing/: SKILL.md
.github/workflows/: test.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: prompts.py  runtime.py
backend/app/agent/prompts/: __init__.py
backend/app/agent/subagents/: __init__.py  deep_research.py  personal_data.py
backend/app/api/: chat.py  health.py  sessions.py
backend/app/core/: config.py  logging.py
backend/app/db/: init_db.py  models.py  repositories.py  session.py
backend/app/memory/: __init__.py  checkpoint.py  history.py
backend/app/observability/: langsmith.py
backend/app/schemas/: chat.py
backend/app/tools/: __init__.py  personal_tools.py  research_tools.py
backend/tests/: __init__.py  conftest.py  test_api_chat.py  test_repositories.py  test_tools_personal.py
docs/: deep-research-subagent.md  technical-solution.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: chat-shell.tsx
frontend/lib/: api.ts  types.ts
scripts/: deploy.sh
