[project]
name = "lang-claw-backend"
version = "0.1.0"
description = "Backend for the Lang Claw personal assistant agent."
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "asyncpg>=0.30,<1",
  "deepagents>=0.4,<0.5",
  "fastapi>=0.115,<1",
  "greenlet>=3.1,<4",
  "httpx>=0.28,<1",
  "langchain>=1.0,<2",
  "langchain-openai>=0.3,<1",
  "langgraph>=1.0,<2",
  "langgraph-checkpoint-mongodb>=0.3,<0.4",
  "motor>=3.7,<4",
  "orjson>=3.10,<4",
  "pydantic-settings>=2.8,<3",
  "pymongo>=4.11,<5",
  "python-dotenv>=1.0,<2",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
